--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.github.dexafree:materiallist:3.0.1'
+    compile 'de.greenrobot:greendao:1.3.7'
+    compile 'de.greenrobot:greendao-generator:1.3.1'
+    compile 'com.github.nkzawa:socket.io-client:0.3.0'
+    compile 'com.koushikdutta.async:androidasync:2.+'
 }
