--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 07 16:16:35 GMT+08:00 2015
+#Wed Oct 14 15:31:57 CST 2015
 sdk.dir=/Users/macbook/Documents/android-sdk-macosx
