--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,6 @@ dependencies {
     compile 'com.github.dexafree:materiallist:3.0.1'
     compile 'de.greenrobot:greendao:1.3.7'
     compile 'de.greenrobot:greendao-generator:1.3.1'
-    compile 'com.github.nkzawa:socket.io-client:0.3.0'
-    compile 'com.koushikdutta.async:androidasync:2.+'
+//    compile 'com.github.nkzawa:socket.io-client:0.3.0'
+//    compile 'com.koushikdutta.async:androidasync:2.+'
 }
