--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,8 +56,19 @@
             android:label="@string/title_activity_search" >
         </activity>
 
-        <service android:name="com.baidu.location.f" android:enabled="true" android:process=":remote"></service>
+        <service
+            android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote" />
 
+        <activity
+            android:name=".OrderConfirmationActivity"
+            android:label="@string/title_activity_post_order"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.guokrspace.duducar.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
