--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,12 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
 File propFile = file('signing.properties');
@@ -66,11 +72,13 @@ if (propFile.exists()) {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.0'
+    //    compile 'com.github.nkzawa:socket.io-client:0.3.0'
+//    compile 'com.koushikdutta.async:androidasync:2.+'
+    compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'com.github.dexafree:materiallist:3.0.1'
     compile 'de.greenrobot:greendao:1.3.7'
     compile 'de.greenrobot:greendao-generator:1.3.1'
-//    compile 'com.github.nkzawa:socket.io-client:0.3.0'
-//    compile 'com.koushikdutta.async:androidasync:2.+'
+    compile 'com.android.support:design:23.0.1'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
 }
