--- a/app/signing.properties
+++ b/app/signing.properties
@@ -1,4 +1,4 @@
-STORE_FILE=/Users/macbook/Documents/android-sdk-macosx/signingconfig/guokrspace.keystore
+STORE_FILE=/Users/kai/Documents/AndroidDevelopment/guokrspace
 STORE_PASSWORD=guokrspace2013
 KEY_ALIAS=mactop
 KEY_PASSWORD=mactop2013
