消息机制增加超时和失败的处理

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
             android:label="" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -69,6 +70,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".PreOrderActivity" />
         </activity>
+        <activity android:name=".CostEstimateActivity"></activity>
     </application>
 
 </manifest>
