UI流程演示完成。大多接口对接缺乏。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,35 +45,33 @@ android {
     }
 }
 
-//File propFile = file('signing.properties');
-//if (propFile.exists()) {
-//    def Properties props = new Properties()
-//    props.load(new FileInputStream(propFile))
-//
-//    if (props.containsKey('STORE_FILE') && props.containsKey('STORE_PASSWORD') && props.containsKey('KEY_ALIAS') && props.containsKey('KEY_PASSWORD')) {
-//        android.signingConfigs.release.storeFile = file(props['STORE_FILE'])
-//        android.signingConfigs.release.storePassword = props['STORE_PASSWORD']
-//        android.signingConfigs.release.keyAlias = props['KEY_ALIAS']
-//        android.signingConfigs.release.keyPassword = props['KEY_PASSWORD']
-//        android.signingConfigs.debug.storeFile = file(props['STORE_FILE'])
-//        android.signingConfigs.debug.storePassword = props['STORE_PASSWORD']
-//        android.signingConfigs.debug.keyAlias = props['KEY_ALIAS']
-//        android.signingConfigs.debug.keyPassword = props['KEY_PASSWORD']
-//
-//    } else {
-//        android.buildTypes.release.signingConfig = null
-//        android.buildTypes.debug.signingConfig = null
-//    }
-//} else {
-//    android.buildTypes.release.signingConfig = null
-//    android.buildTypes.debug.signingConfig = null
-//}
+File propFile = file('signing.properties');
+if (propFile.exists()) {
+    def Properties props = new Properties()
+    props.load(new FileInputStream(propFile))
+
+    if (props.containsKey('STORE_FILE') && props.containsKey('STORE_PASSWORD') && props.containsKey('KEY_ALIAS') && props.containsKey('KEY_PASSWORD')) {
+        android.signingConfigs.release.storeFile = file(props['STORE_FILE'])
+        android.signingConfigs.release.storePassword = props['STORE_PASSWORD']
+        android.signingConfigs.release.keyAlias = props['KEY_ALIAS']
+        android.signingConfigs.release.keyPassword = props['KEY_PASSWORD']
+        android.signingConfigs.debug.storeFile = file(props['STORE_FILE'])
+        android.signingConfigs.debug.storePassword = props['STORE_PASSWORD']
+        android.signingConfigs.debug.keyAlias = props['KEY_ALIAS']
+        android.signingConfigs.debug.keyPassword = props['KEY_PASSWORD']
+
+    } else {
+        android.buildTypes.release.signingConfig = null
+        android.buildTypes.debug.signingConfig = null
+    }
+} else {
+    android.buildTypes.release.signingConfig = null
+    android.buildTypes.debug.signingConfig = null
+}
 
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    //    compile 'com.github.nkzawa:socket.io-client:0.3.0'
-//    compile 'com.koushikdutta.async:androidasync:2.+'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'com.github.dexafree:materiallist:3.0.1'
