--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.guokrspace.duducar" >
 
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <!-- SDK1.5需要android.permission.GET_TASKS权限判断本程序是否为当前运行的应用? -->
@@ -64,8 +65,7 @@
         <activity
             android:name=".PostOrderActivity"
             android:label="@string/title_activity_order_cab"
-            android:parentActivityName=".PreOrderActivity"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:parentActivityName=".PreOrderActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".PreOrderActivity" />
