--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.guokrspace.duducar" >
+    package="com.guokrspace.duducar"
+          android:versionCode="1"
+          android:versionName="1">
 
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
@@ -41,7 +43,7 @@
 
         <activity
             android:name=".PreOrderActivity"
-            android:label="" >
+            android:label="嘟嘟打车" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
