--- a/driver_pro/app/build.gradle
+++ b/driver_pro/app/build.gradle
@@ -43,29 +43,29 @@ android {
     }
 }
 
-//File propFile = file('signing.properties');
-//if (propFile.exists()) {
-//    def Properties props = new Properties()
-//    props.load(new FileInputStream(propFile))
-//
-//    if (props.containsKey('STORE_FILE') && props.containsKey('STORE_PASSWORD') && props.containsKey('KEY_ALIAS') && props.containsKey('KEY_PASSWORD')) {
-//        android.signingConfigs.release.storeFile = file(props['STORE_FILE'])
-//        android.signingConfigs.release.storePassword = props['STORE_PASSWORD']
-//        android.signingConfigs.release.keyAlias = props['KEY_ALIAS']
-//        android.signingConfigs.release.keyPassword = props['KEY_PASSWORD']
-//        android.signingConfigs.debug.storeFile = file(props['STORE_FILE'])
-//        android.signingConfigs.debug.storePassword = props['STORE_PASSWORD']
-//        android.signingConfigs.debug.keyAlias = props['KEY_ALIAS']
-//        android.signingConfigs.debug.keyPassword = props['KEY_PASSWORD']
-//
-//    } else {
-//        android.buildTypes.release.signingConfig = null
-//        android.buildTypes.debug.signingConfig = null
-//    }
-//} else {
-//    android.buildTypes.release.signingConfig = null
-//    android.buildTypes.debug.signingConfig = null
-//}
+File propFile = file('signing.properties');
+if (propFile.exists()) {
+    def Properties props = new Properties()
+    props.load(new FileInputStream(propFile))
+
+    if (props.containsKey('STORE_FILE') && props.containsKey('STORE_PASSWORD') && props.containsKey('KEY_ALIAS') && props.containsKey('KEY_PASSWORD')) {
+        android.signingConfigs.release.storeFile = file(props['STORE_FILE'])
+        android.signingConfigs.release.storePassword = props['STORE_PASSWORD']
+        android.signingConfigs.release.keyAlias = props['KEY_ALIAS']
+        android.signingConfigs.release.keyPassword = props['KEY_PASSWORD']
+        android.signingConfigs.debug.storeFile = file(props['STORE_FILE'])
+        android.signingConfigs.debug.storePassword = props['STORE_PASSWORD']
+        android.signingConfigs.debug.keyAlias = props['KEY_ALIAS']
+        android.signingConfigs.debug.keyPassword = props['KEY_PASSWORD']
+
+    } else {
+        android.buildTypes.release.signingConfig = null
+        android.buildTypes.debug.signingConfig = null
+    }
+} else {
+    android.buildTypes.release.signingConfig = null
+    android.buildTypes.debug.signingConfig = null
+}
 
 
 dependencies {
