完成主线程大部分界面，包括去送乘客（PickUpPassengerActivity）界面完善了百度地图添加路线，确认账单界面（ConfirmBillActivity）,确认账单对话框，订单详情界面（OrderDetailActivity）

--- a/driver_pro/app/build.gradle
+++ b/driver_pro/app/build.gradle
@@ -67,10 +67,10 @@ if (propFile.exists()) {
     android.buildTypes.debug.signingConfig = null
 }
 
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':indicator_library')
+    compile project(':MaterialDesign')
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'com.github.dexafree:materiallist:3.0.1'
