--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.guokrspace.duducar"
-          android:versionCode="1"
-          android:versionName="1">
+    android:versionCode="1"
+    android:versionName="1" >
 
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <!-- SDK1.5需要android.permission.GET_TASKS权限判断本程序是否为当前运行的应用? -->
@@ -72,7 +72,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".PreOrderActivity" />
         </activity>
-        <activity android:name=".CostEstimateActivity"></activity>
+        <activity android:name=".CostEstimateActivity" />
+        <activity
+            android:name=".AlipayActivity"
+            android:label="@string/title_activity_alipay" >
+        </activity>
     </application>
 
 </manifest>
