--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 30 19:55:49 CST 2015
-sdk.dir=/Users/hyman/Library/Android/sdk
+#Mon Nov 02 19:30:38 CST 2015
+sdk.dir=F\:\\Android SDK
