--- a/driver_pro/app/src/main/AndroidManifest.xml
+++ b/driver_pro/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.guokrspace.dududriver">
+    package="com.guokrspace.dududriver" >
 
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -33,7 +33,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppBaseTheme">
+        android:theme="@style/AppBaseTheme" >
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="qGx8XpcPAkQ0nGbyml3IlNOt" />
@@ -43,9 +43,10 @@
             android:label="" />
         <activity
             android:name=".ui.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -55,7 +56,6 @@
         <activity
             android:name=".ui.SettingActivity"
             android:label="设置" />
-
         <activity
             android:name=".ui.PostOrderActivity"
             android:label="订单" />
@@ -63,7 +63,7 @@
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
-            android:process=":remote"/>
+            android:process=":remote" />
 
         <activity
             android:name=".ui.PickUpPassengerActivity"
@@ -74,7 +74,12 @@
         <activity
             android:name=".ui.OrderDetailActivity"
             android:label="订单详情" />
-    </application>
 
+        <service
+            android:name=".net.DuduService"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
+    </application>
 
 </manifest>
