--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 05 22:48:46 CST 2015
-sdk.dir=/Users/hyman/Library/Android/sdk
+#Tue Nov 10 11:14:20 CST 2015
+sdk.dir=F\:\\Android SDK
