添加了订单地图（热力图）界面，修改界面上的一些动态化的数据

--- a/driver_pro/app/src/main/AndroidManifest.xml
+++ b/driver_pro/app/src/main/AndroidManifest.xml
@@ -76,6 +76,9 @@
         <activity
             android:name=".ui.OrderDetailActivity"
             android:label="订单详情" />
+        <activity
+            android:name=".ui.OrderMapActivity"
+            android:label="订单地图" />
     </application>
 
 
