--- a/app/signing.properties
+++ b/app/signing.properties
@@ -1,8 +1,5 @@
-<<<<<<< HEAD
 STORE_FILE=/Users/daddyfang/AndroidDevelopment/guokrspace
-=======
-STORE_FILE=F\:\\Android SDK\\keystore\\guokrspace
->>>>>>> 9dae55d96f5af9fd0c93481389286f76d584745c
+#STORE_FILE=F\:\\Android SDK\\keystore\\guokrspace
 STORE_PASSWORD=guokrspace2013
 KEY_ALIAS=mactop
 KEY_PASSWORD=mactop2013
