--- a/local.properties
+++ b/local.properties
@@ -7,10 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-#Mon Nov 09 16:10:07 CST 2015
+#Fri Nov 13 16:24:44 CST 2015
+>>>>>>>=9dae55d96f5af9fd0c93481389286f76d584745c
 sdk.dir=/Users/daddyfang/Library/Android/sdk
-=======
-#Tue Nov 10 11:14:20 CST 2015
-sdk.dir=F\:\\Android SDK
->>>>>>> 9dae55d96f5af9fd0c93481389286f76d584745c
+<<<<<<<=HEAD
+=\=\=\=\=\=\=
