--- a/driver_pro/app/build.gradle
+++ b/driver_pro/app/build.gradle
@@ -81,4 +81,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.alibaba:fastjson:1.1.34.android'
     compile 'com.hannesdorfmann:adapterdelegates:1.1.0'
+    compile 'com.google.code.gson:gson:2.2.2'
 }
