--- a/driver_pro/app/build.gradle
+++ b/driver_pro/app/build.gradle
@@ -71,8 +71,8 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':indicator_library')
     compile project(':MaterialDesign')
-    compile 'com.android.support:appcompat-v7:23.0.0'
-    compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.android.support:recyclerview-v7:23.1.0'
     compile 'com.github.dexafree:materiallist:3.0.1'
     compile 'de.greenrobot:greendao:1.3.7'
     compile 'de.greenrobot:greendao-generator:1.3.1'
@@ -82,4 +82,5 @@ dependencies {
     compile 'com.alibaba:fastjson:1.1.34.android'
     compile 'com.hannesdorfmann:adapterdelegates:1.1.0'
     compile 'com.google.code.gson:gson:2.2.2'
+//    compile 'com.android.support:design:23.1.0'
 }
