--- a/driver_pro/app/build.gradle
+++ b/driver_pro/app/build.gradle
@@ -82,5 +82,6 @@ dependencies {
     compile 'com.alibaba:fastjson:1.1.34.android'
     compile 'com.hannesdorfmann:adapterdelegates:1.1.0'
     compile 'com.google.code.gson:gson:2.2.2'
-//    compile 'com.android.support:design:23.1.0'
+    //    compile 'com.android.support:design:23.1.0'
+    compile files('libs/BaiduNaviSDK_2.0.jar')
 }
