--- a/driver_pro/app/src/main/AndroidManifest.xml
+++ b/driver_pro/app/src/main/AndroidManifest.xml
@@ -99,6 +99,7 @@
             android:name=".ui.OrderMapActivity"
             android:label="订单地图" />
         <activity android:name=".ui.AlipayActivity"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
             android:label="账单支付" />
 
         <service
