--- a/driver_pro/app/build.gradle
+++ b/driver_pro/app/build.gradle
@@ -4,6 +4,7 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
+
     defaultConfig {
         applicationId "com.guokrspace.dududriver"
         minSdkVersion 11
@@ -82,7 +83,11 @@ dependencies {
     compile 'com.alibaba:fastjson:1.1.34.android'
     compile 'com.hannesdorfmann:adapterdelegates:1.1.0'
     compile 'com.google.code.gson:gson:2.2.2'
-//    compile 'com.android.support:design:23.1.0'
-//    compile files('libs/BaiduNaviSDK_2.0.jar')
-//    compile files('libs/alipaySdk-20151103.jar')
+    compile 'me.drakeet.materialdialog:library:1.2.8'
+    compile 'com.zhy:okhttputils:1.0.2'
+    //    compile 'com.android.support:design:23.1.0'
+    //    compile files('libs/BaiduNaviSDK_2.0.jar')
+    //    compile files('libs/alipaySdk-20151103.jar')
+    //    compile files('libs/libammsdk.jar')
+//    compile files('libs/httpcore-4.3.2.jar')
 }
