--- a/driver_pro/app/build.gradle
+++ b/driver_pro/app/build.gradle
@@ -82,7 +82,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.alibaba:fastjson:1.1.34.android'
     compile 'com.hannesdorfmann:adapterdelegates:1.1.0'
-    compile 'com.google.code.gson:gson:2.2.2'
+    provided 'com.google.code.gson:gson:2.2.2'
     compile 'me.drakeet.materialdialog:library:1.2.8'
     compile 'com.zhy:okhttputils:1.0.2'
     //    compile 'com.android.support:design:23.1.0'
