--- a/driver_pro/settings.gradle
+++ b/driver_pro/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':indicator_library', ':DaoDBGenerator', ':MaterialDesign'
+include ':app', ':indicator_library', ':DaoDBGenerator', ':MaterialDesign', ':ToggleButtonLib'
