--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 11
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.1"
     }
 
     sourceSets {
@@ -71,7 +71,7 @@ if (propFile.exists()) {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile project(':library_slidingmenu')
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'com.github.dexafree:materiallist:3.1.2'
     compile 'de.greenrobot:greendao:1.3.7'
