--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppBaseTheme">
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="yWIyrGPVMWZt9Y7gYA9SVeHx" />
@@ -48,7 +48,8 @@
 
         <activity
             android:name=".PreOrderActivity"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:theme="@style/AppBaseTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -107,6 +108,21 @@
                 <action android:name="com.tencent.mm.plugin.openapi.Intent.ACTION_REFRESH_WXAPP" />
             </intent-filter>
         </receiver>
+
+        <activity android:name=".OrderHistoryActivity"
+            android:exported="false"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="历史订单"/>
+        <activity
+            android:name=".SettingActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:exported="false"
+            android:label="设置" />
+        <activity
+            android:name=".PersonalInfoActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:exported="false"
+            android:label="个人信息" />
 
         <!-- wepay init end -->
 
