--- a/duducar_passengar_ios/duducar/Info.plist
+++ b/duducar_passengar_ios/duducar/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<string>嘟嘟打车</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
