--- a/duducar_passengar_ios/Podfile
+++ b/duducar_passengar_ios/Podfile
@@ -10,6 +10,7 @@ pod 'FMDB'
 pod 'Masonry'
 pod 'BaiduMapKit'
 pod 'HCSStarRatingView', '~> 1.4.3'
+pod 'SDWebImage', '~>3.7'
 end
 
 target 'duducarTests' do
