--- a/duducar_passengar_ios/duducar/Info.plist
+++ b/duducar_passengar_ios/duducar/Info.plist
@@ -28,6 +28,10 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>weixin</string>
+    </array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
