--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,13 @@
     android:versionCode="1"
     android:versionName="1.0.1">
 
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:resizeable="true"
+        android:smallScreens="true" />
+
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -31,7 +38,7 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <!-- 允许应用读取低级别的系统日志文件 -->
     <uses-permission android:name="android.permission.READ_LOGS" />
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <!-- Permission for Unit Test -->
     <uses-permission android:name="android.permission.GET_TASKS" />
 
@@ -85,8 +92,7 @@
 
         <service
             android:name=".communication.DuduService"
-            android:exported="false">
-        </service>
+            android:exported="false"></service>
 
         <!-- alipay sdk begin -->
         <activity
@@ -102,19 +108,19 @@
             android:name=".wxapi.WXPayEntryActivity"
             android:exported="true"
             android:launchMode="singleTop"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
-        <receiver
-            android:name=".wxapi.AppRegister">
+        <receiver android:name=".wxapi.AppRegister">
             <intent-filter>
                 <action android:name="com.tencent.mm.plugin.openapi.Intent.ACTION_REFRESH_WXAPP" />
             </intent-filter>
         </receiver>
 
-        <activity android:name=".OrderHistoryActivity"
-            android:exported="false"
+        <activity
+            android:name=".OrderHistoryActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:label="历史订单"/>
+            android:exported="false"
+            android:label="历史订单" />
         <activity
             android:name=".SettingActivity"
             android:configChanges="keyboardHidden|orientation"
@@ -133,34 +139,35 @@
         <activity
             android:name=".FeedBackActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:windowSoftInputMode="stateVisible|adjustUnspecified"
             android:exported="false"
-            android:label="帮助与反馈" />
+            android:label="帮助与反馈"
+            android:windowSoftInputMode="stateVisible|adjustUnspecified" />
+        <activity
+            android:name=".WebViewActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:exported="false"
+            android:label="关于嘟嘟" />
 
         <!-- wepay init end -->
 
         <!-- Update Activitys Start -->
         <activity
             android:name="com.umeng.update.UpdateDialogActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
-        </activity>
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"></activity>
 
         <!-- Update Activitys End -->
 
         <!-- Caution! Do not change this app key. It is only for demo usage. -->
         <meta-data
             android:name="UMENG_APPKEY"
-            android:value="5667dae667e58ebd3b002e0e" >
-        </meta-data>
+            android:value="5667dae667e58ebd3b002e0e"></meta-data>
         <meta-data
             android:name="UMENG_CHANNEL"
-            android:value="Umeng" >
-        </meta-data>
+            android:value="Umeng"></meta-data>
 
         <service
             android:name="com.umeng.update.net.DownloadingService"
-            android:process=":DownloadingService" >
-        </service>
+            android:process=":DownloadingService"></service>
     </application>
 
 </manifest>
