--- a/duducar_passengar_ios/Podfile
+++ b/duducar_passengar_ios/Podfile
@@ -1,7 +1,7 @@
 # Uncomment this line to define a global platform for your project
-platform :ios, '7.0'
+platform :ios, '7.1'
 # Uncomment this line if you're using Swift
-use_frameworks!
+# use_frameworks!
 
 target 'duducar' do
 pod 'CocoaAsyncSocket'
