--- a/driver_pro/app/src/main/AndroidManifest.xml
+++ b/driver_pro/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <!-- 摄影机 -->
     <uses-permission android:name="android.permission.CAMERA" />
+    <!-- 前台后台判断 -->
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.REORDER_TASKS" />
 
     <application
         android:name=".DuduDriverApplication"
