--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,7 @@
         <activity
             android:name=".SearchActivity"
             android:screenOrientation="portrait"
+            android:launchMode="singleTop"
             android:label="@string/title_activity_search">
 
         </activity>
