--- a/driver_pro/app/build.gradle
+++ b/driver_pro/app/build.gradle
@@ -9,6 +9,8 @@ android {
         applicationId "com.guokrspace.dududriver"
         minSdkVersion 11
         targetSdkVersion 23
+        //  Enabling multidex support.
+        multiDexEnabled true
         versionCode 3
         versionName "1.0.3"
     }
@@ -81,7 +83,7 @@ dependencies {
     compile 'com.github.nkzawa:socket.io-client:0.3.0'
     compile 'com.koushikdutta.async:androidasync:2.+'
     compile 'com.jakewharton:butterknife:7.0.1'
-    provided 'com.alibaba:fastjson:1.1.34.android'
+    compile 'com.alibaba:fastjson:1.1.34.android'
     compile 'com.hannesdorfmann:adapterdelegates:1.1.0'
     provided 'com.google.code.gson:gson:2.2.2'
     compile 'me.drakeet.materialdialog:library:1.2.8'
