多渠道打包，修改支付后订单详情中的里程数，修改司机端联系我们webview 界面的title，添加司机端第一次登陆之后就获取baseinfo的机制

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.guokrspace.duducar"
         minSdkVersion 11
         targetSdkVersion 23
-        versionCode 7
-        versionName "1.0.7"
+        versionCode 8
+        versionName "beta1.0"
     }
 
     sourceSets {
@@ -21,15 +21,33 @@ android {
     }
 
     signingConfigs {
-        release
+        release {
+            keyAlias 'mactop2013'
+            keyPassword 'mactop2013'
+            storeFile file('/Users/hyman/Documents/AndroidDevelopment/guokrspace')
+            storePassword 'guokrspace'
+        }
         debug
     }
 
     buildTypes {
         release {
 //            minifyEnabled true
-//            proguardFiles 'proguard-project.txt'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            zipAlignEnabled true
+            shrinkResources true
             signingConfig signingConfigs.release
+
+            applicationVariants.all { variant ->
+                variant.outputs.each { output ->
+                    def outputFile = output.outputFile
+                    if (outputFile != null && outputFile.name.endsWith('.apk')) {
+                        // 输出apk名称为duducar_beta1.0_wandoujia.apk
+                        def fileName = "duducar_${defaultConfig.versionName}_${variant.productFlavors[0].name}.apk"
+                        output.outputFile = new File(outputFile.parent, fileName)
+                    }
+                }
+            }
         }
 
         debug {
@@ -37,10 +55,19 @@ android {
         }
     }
 
-
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
+    }
+
+    productFlavors {
+        wandoujia {}
+        baidu {}
+    }
+
+    productFlavors.all {
+        flavor ->
+            flavor.manifestPlaceholders = [CHANNEL_NAME: flavor.name]
     }
 }
 
