--- a/driver_pro/app/src/main/AndroidManifest.xml
+++ b/driver_pro/app/src/main/AndroidManifest.xml
@@ -214,7 +214,7 @@
         </meta-data>
         <meta-data
             android:name="UMENG_CHANNEL"
-            android:value="DuduDriver" >
+            android:value="${CHANNEL_NAME}" >
         </meta-data>
 
         <service
