完成乘客端个人信息模块。包括修改本地PersonalInfomation表，修改PersonalInfoActivity界面，增加EditPersonalInfoActivity、CertifyRealNameActivity，支持修改个人信息，进行实名认证等。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,9 +64,9 @@
             android:screenOrientation="portrait"></activity>
         <activity
             android:name=".SearchActivity"
-            android:screenOrientation="portrait"
+            android:label="@string/title_activity_search"
             android:launchMode="singleTop"
-            android:label="@string/title_activity_search">
+            android:screenOrientation="portrait">
 
         </activity>
 
@@ -170,7 +170,18 @@
             android:exported="false"
             android:label="常用地址"
             android:screenOrientation="portrait" />
-
+        <activity
+            android:name=".EditPersonalInfoActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:exported="false"
+            android:label="编辑资料"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".CertifyRealNameActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:exported="false"
+            android:label="实名认证"
+            android:screenOrientation="portrait" />
 
         <!-- Update Activitys Start -->
         <activity
