--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.guokrspace.duducar"
@@ -103,7 +103,7 @@ dependencies {
     compile 'com.github.dexafree:materiallist:3.1.2'
     compile 'de.greenrobot:greendao:1.3.7'
     compile 'de.greenrobot:greendao-generator:1.3.1'
-    compile 'com.android.support:design:23.0.1'
+    compile 'com.android.support:design:23.1.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.zhy:okhttputils:1.0.2'
     compile 'me.drakeet.materialdialog:library:1.2.8'
